--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
 		"start": "react-scripts --openssl-legacy-provider start",
-		"build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+		"build": "react-scripts build",
 		"test": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
 		"eject": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts eject"
 	},
