--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"deploy": "gh-pages -d build",
 		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "react-scripts --openssl-legacy-provider build",
-		"test": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
-		"eject": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts eject"
+		"test": "react-scripts --openssl-legacy-provider test",
+		"eject": "react-scripts --openssl-legacy-provider eject"
 	},
 	"eslintConfig": {
 		"extends": [
